@@ -1,0 +1,5 @@
+import asyncio
+
+
+async def main():
+    await asyncio.sleep(1)
